# codigo-fonte-do-algoritmo-2

./: README.md
Algoritmo2-2024/: A_DiferencaDeString.cpp  CMakeLists.txt  Calcular  CalcularAreaDoTriangulo  CalcularAreaDoTriangulo.cpp  CalcularBaseDoExpoente.cpp  CalcularORaio.cpp  CalcularRaizAoQuadrado1.cpp  CalcularRaizAoQuadrado1.cpp   CalcularSomaDosTermoDeUmaPa.cpp  CalculoMediaDeDuasNotas.cpp  ComandoGets_LerUmaString.cpp  ContadorDeNumero.cpp  ConversorDeMoeda  DadoDaPessoa  DigitarOTamanhoDaString.cpp  DigitarO_Ponto.cpp  DoaçãoDeSangue  ElevarAoQuadrado.cpp  Pessoa1  QuantidadeDeCaractere.cpp  RaizAoQuadrado.cpp  SequenciaNumerica  SequenciaNumerica.cpp  Soma1  SomaDaCondenadaDoPonto.cpp  SomaDaMatriz.cpp  SomaDeFracao  SomaDeTodoNumero.cpp  SomaMatriz  Strcmp  Tabuada.cpp  ValorInvertido  ValorInvertido.cpp  a  as  pessoa.cpp  salario.cpp
EscalaDeTemperatura/: CMakeLists.txt  CelsiusConvertidoParaDelisle
EscalaDeTemperatura/FormulaCelcius/: DelisleConvertidoParaCelcius.cpp  FahrenheitConvertidoParaCelcius.cpp  KelvinConvertidoParaCelcius.cpp  NewtonConvertidoParaCelcius.cpp  RankineConvertidoParaCelcius.cpp  ReaumurConvertidoParaCelcius.cpp  RomerConvertidoParaCelcius.cpp
EscalaDeTemperatura/FormulaDelisle/: CelsiusConvertidoParaDelisle.cpp  FahrenheitConvertidoParaDelisle.cpp  KelvinConvertidoParaDelisle.cpp  NewtonConvertidoParaDelisle.cpp  RankineConvertidoParaDelisle.cpp  ReumurConvertidoParaDelisle.cpp  RomerConvertidoParaDelisle.cpp
EscalaDeTemperatura/FormulaFahrenheit/: CelsiusConvertidoParaFahrenheit.cpp  DelisleConvertidoParaFahrenheit.cpp  KelvinConvertidoParaFahrenheit.cpp  NewtonConvertidoParaFahrenheit.cpp  RankineConvertidoParaFahrenheit.cpp  ReaumurConvertidoParaFahrenheit.cpp  RomerConvertidoParaFahrenheit.cpp
EscalaDeTemperatura/FormulaKelvin/: CelsiusConvertidoParaKelvin.cpp  DelisleConvertidoParaKelvin.cpp  FahrenheitConvertidoParaKelvin.cpp  NewtonConvertidoParaKelvin.cpp  RankineConvertidoParaKelvin.cpp  ReaumurConvertidoParaKelvin.cpp  RømerConvertidoParaKelvin.cpp
EscalaDeTemperatura/FormulaNewton/: CelsiusConvertidoParaNewton.cpp  DelisleConvertidoParaNewton.cpp  FahrenheitConvertidoParaNewton.cpp  KelvinConvertidoParaNewton.cpp  RankineConvertidoParaNewton.cpp  ReaumurConvertidoParaNewton.cpp  RomerConvertidoParaNewton.cpp
EscalaDeTemperatura/FormulaRankine/: CelsiusConvertidoParaRankine.cpp  (+6 more)
(+491 files in other folders)
