cmake_minimum_required(VERSION 3.26)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled SequenciaNumerica.cpp
        exemplo31.cpp
        LeituraDeMatriz.cpp
        exemplo37.cpp
        CalcularAreaDoTriangulo.cpp
        CalcularAreaDaBase.h
        NumeroMaior.cpp
        CalcularAreaDoTriangulo.cpp
        CalcularSomaDeTodoNumero.cpp
        a.h
        ExemploDoFor.cpp
        ExemploDoWhile1.cpp
        ExemploDoWhile1.h
        ExemploDoWhile2.cpp
        ExemploDoWhile2.h
        Exemplo43.cpp
        Exemplo43.cpp
        SomaDaCondenadaDoPonto.cpp
        salario.cpp
        ExemploDePessoa.cpp
        Pessoa1.cpp
        Exercicio6_LerDadoDoAluno.cpp
        CadastroDoProduto.cpp
        Matriz/LeituraDaMatriz.cpp
        Matriz/ExemploDeMatriz.h
        Matriz/SomaDaMatriz.cpp
        Matriz/LerLinhaE_ColunaDaMatriz.cpp
        NumeroDeSequencia.cpp
        Fibonacci.cpp
        Fibonacci.h
        Somatorio.cpp
        CalcularSomaDeTodoNumero.cpp
        ExemploDaPotenciacao.cpp
        CalcularValoresDeRaiz.cpp
        Exercicio6_LerDadoDoAluno.cpp
        Matriz/ExemploDoStrcmo.cpp
        ExemploDoStrcmp/Ler_Palavra_Maior_E_Igual.cpp
        ComandoGets_LerUmaString.cpp
        Soma1.cpp
        ExemploDoUsoDeVarioConceitoBasico/ExemploDoStruct.cpp
        ExemploDoUsoDeVarioConceitoBasico/ExemploDoStruct.cpp
        CalcularORaio.cpp
        DadoDaPessoa.cpp
        Operacional/Processo/Processo4.cpp
)
